[package]
name = "rust_lib_canokey_console"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.7.0"
image = { version = "0.25.5", default-features = false, features = ["png"] }
once_cell = "1.20.2"
rxing = { version = "0.6.2", features = ["client_support", "image", "wasm_support"], default-features = false }
