[package]
name = "rust_lib_canokey_console"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
des = "0.8.1"
flutter_rust_bridge = "=2.7.0"
image = { version = "0.25.5", default-features = false, features = ["png"] }
log = "0.4.22"
once_cell = "1.20.2"
pbkdf2 = { version = "=0.12.2", features = ["hmac"] }
rxing = { version = "0.6.2", features = ["client_support", "image", "wasm_support"], default-features = false }
sha1 = "0.10.6"
x509-parser = "0.16.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
